# smog

./: .gitignore  README.md  pyproject.toml
notebooks/: README.md  smog_usage_example.ipynb
src/smog/: __init__.py  cloud.py  io.py  mass_handling.py  plotting.py
tests/: test_cloud_offset.py  test_mass_cloud_pipeline.py  test_plotting.py
tests/resources/: sectional_masses.csv
tmp/: test.py
